añadiendo logica de tarjetas
