# cards-service/src/main/java/com/bca/cards_service/domain/model/ports/rest/ExternalAccountsClient.java
@@ -1,0 +1,15 @@
+package com.bca.cards_service.domain.model.ports.rest;
+
+import java.math.BigDecimal;
+
+import org.springframework.http.ResponseEntity;
+
+import com.bca.cards_service.domain.model.account.Account;
+import com.bca.cards_service.infrastructure.output.rest.dto.AccountBalanceResponse;
+
+import reactor.core.publisher.Mono;
+
+public interface ExternalAccountsClient {
+    Mono<ResponseEntity<Account>>  AccountWithdrawal(String accountId, BigDecimal amount);
+    Mono<ResponseEntity<AccountBalanceResponse>>  AccountBalance(String accountId);
+}
